Fixed the paths in the pages
The paths were "pages\<page_name>", fixed to "Pages\<page_name>".

Plus, added a site map page.

All are still NOT designed.

--- a/Pages/FAQ.htm
+++ b/Pages/FAQ.htm
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-    <title>Downloads Page</title>
+    <title>FAQ Page</title>
 </head>
 
 <body>
-    <h1>This is the Downloads page</h1>
+    <h1>This is the FAQ page</h1>
     
     <ul>
-        <li><a href="pages/About.htm">About</a></li>
-        <li><a href="pages/FAQ.htm">FAQ</a></li>
-        <li><a href="pages/SignUp.htm">Sign up</a></li>
-        <li><a href="pages/Downloads.htm">Downloads</a></li>
+        <li><a href="Pages/About.htm">About</a></li>
+        <li><a href="Pages/FAQ.htm">FAQ</a></li>
+        <li><a href="Pages/SignUp.htm">Sign up</a></li>
+        <li><a href="Pages/Downloads.htm">Downloads</a></li>
     </ul>
     
-    <a href="pages/SiteMap.htm">Site Map</a>
+    <a href="Pages/SiteMap.htm">Site Map</a>
 </body>
 
 </html>
