--- a/Pages/SiteMap.htm
+++ b/Pages/SiteMap.htm
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>About Page</title>
+    <title>Site Map</title>
 </head>
 
 <body>
-    <h1>This is the about page</h1>
+    <h1>This is the site map</h1>
     
     <ul>
         <li><a href="Pages/About.htm">About</a></li>
@@ -15,6 +15,7 @@
         <li><a href="Pages/Downloads.htm">Downloads</a></li>
     </ul>
     
+	<h2>site map!</h2>
     <a href="Pages/SiteMap.htm">Site Map</a>
 </body>
 
