--- a/Pages/index.htm
+++ b/Pages/index.htm
@@ -9,13 +9,13 @@
     <h1>This is the main page</h1>
     
     <ul>
-        <li><a href="pages/About.htm">About</a></li>
-        <li><a href="pages/FAQ.htm">FAQ</a></li>
-        <li><a href="pages/SignUp.htm">Sign up</a></li>
-        <li><a href="pages/Downloads.htm">Downloads</a></li>
+        <li><a href="Pages/About.htm">About</a></li>
+        <li><a href="Pages/FAQ.htm">FAQ</a></li>
+        <li><a href="Pages/SignUp.htm">Sign up</a></li>
+        <li><a href="Pages/Downloads.htm">Downloads</a></li>
     </ul>
     
-    <a href="pages/SiteMap.htm">Site Map</a>
+    <a href="Pages/SiteMap.htm">Site Map</a>
 </body>
 
 </html>
