Changed the paths
As we said.

--- a/Pages/SiteMap.htm
+++ b/Pages/SiteMap.htm
@@ -9,14 +9,14 @@
     <h1>This is the site map</h1>
     
     <ul>
-        <li><a href="Pages/About.htm">About</a></li>
-        <li><a href="Pages/FAQ.htm">FAQ</a></li>
-        <li><a href="Pages/SignUp.htm">Sign up</a></li>
-        <li><a href="Pages/Downloads.htm">Downloads</a></li>
+        <li><a href="About.htm">About</a></li>
+        <li><a href="FAQ.htm">FAQ</a></li>
+        <li><a href="SignUp.htm">Sign up</a></li>
+        <li><a href="Downloads.htm">Downloads</a></li>
     </ul>
     
 	<h2>site map!</h2>
-    <a href="Pages/SiteMap.htm">Site Map</a>
+    <a href="SiteMap.htm">Site Map</a>
 </body>
 
 </html>
