--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -9,15 +9,19 @@
 
 <body>
 	<header>
-		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="our logo" height="25%"></a>
+		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="our logo"></a>
 		
-		<nav>
-			<ul>
-				<li><a href="About.htm"><img src="https://placekitten.com/g/175/60" alt="About"></a>
-				<li><a href="FAQ.htm"><img src="https://placekitten.com/g/90/60" alt="FAQ"></a>
-				<li><a href="SignUp.htm"><img src="https://placekitten.com/g/160/60" alt="Sign Up"></a>
-				<li><a href="Download.htm"><img src="https://placekitten.com/g/185/60" alt="Download"></a>
-			</ul>
+		<nav id="top">
+			<table border="5px">
+				<thead>
+					<tr>
+						<th><a href="#">About Us</a></th>
+						<th>FAQ</th>
+						<th>Sign Up</th>
+						<th>Download</th>
+					</tr>
+				</thead>
+			</table>
 		</nav>
 	</header>
 	
@@ -26,8 +30,29 @@
 	</article>
 	
 	
-	
-	
-	
 </body>
 </html>
+
+<!--
+
+			<ul>
+				<li><a href="About.htm"><img class="topNav" src="http://placehold.it/1600x60" alt="About"></a>
+				<li><a href="FAQ.htm"><img class="topNav" src="http://placehold.it/1000x60" alt="FAQ"></a>
+				<li><a href="SignUp.htm"><img class="topNav" src="http://placehold.it/1500x60" alt="Sign Up"></a>
+				<li><a href="Download.htm"><img class="topNav" src="http://placehold.it/1800x60" alt="Download"></a>
+			</ul>
+			
+			
+			
+			<h1><a href="#">About Us</a></h1>
+			<h1><a href="#">FAQ</a></h1>
+			<h1><a href="#">Sign Up</a></h1>
+			<h1><a href="#">Download</a></h1>
+			
+						<ul>
+				<li><a href="#">About Us</a>
+				<li><a href="#">FAQ</a>
+				<li><a href="#">Sign Up</a>
+				<li><a href="#">Download</a>
+			</ul>
+				-->
