--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -12,13 +12,13 @@
 		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="our logo"></a>
 		
 		<nav id="top">
-			<table border="5px">
+			<table id="nav">
 				<thead>
 					<tr>
 						<th><a href="#">About Us</a></th>
-						<th>FAQ</th>
-						<th>Sign Up</th>
-						<th>Download</th>
+						<th><a href="#">FAQ</a></th>
+						<th><a href="#">Sign Up</a></th>
+						<th><a href="#">Download</a></th>
 					</tr>
 				</thead>
 			</table>
@@ -28,6 +28,10 @@
 	<article>
 		
 	</article>
+	
+	<footer>
+	
+	</footer>
 	
 	
 </body>
