--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -2,35 +2,47 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>404 Not Found</title>
-	<link rel="stylesheet" type="text/css" href="Stylesheets/General.css">
+	<title>- - - Page Title - - -</title>
 	<!-- Add CSS stylesheet -->
 </head>
 
 <body>
 	<header>
-		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="our logo"></a>
+	<a href="#"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
-		<nav id="top">
-			<table id="nav">
-				<thead>
-					<tr>
-						<th><a href="#">About Us</a></th>
-						<th><a href="#">FAQ</a></th>
-						<th><a href="#">Sign Up</a></th>
-						<th><a href="#">Download</a></th>
-					</tr>
-				</thead>
-			</table>
-		</nav>
+	<nav id="top">
+		<ul>
+			<li><a href="#">About Us</a>
+			<li><a href="#">FAQ</a>
+			<li><a href="#">Sign Up</a>
+			<li><a href="#">Download</a>
+		</ul>
+	</nav>
 	</header>
 	
-	<article>
-		
-	</article>
+	
+	
+	
+	<section>
+		Page Content
+	</section>
+	
+	
+	
 	
 	<footer>
+	<small>Copyright © 2014-2016 Tamir Shorhy and Nave Tal</small>
 	
+	<nav id="bottom">
+		<ul>
+			<li><a href="#">About Us</a>
+			<li><a href="#">FAQ</a>
+			<li><a href="#">Sign Up</a>
+			<li><a href="#">Download</a>
+			<li><a href="#">Site Map</a>
+		</ul>
+	</nav>
+		
 	</footer>
 	
 	
@@ -39,24 +51,4 @@
 
 <!--
 
-			<ul>
-				<li><a href="About.htm"><img class="topNav" src="http://placehold.it/1600x60" alt="About"></a>
-				<li><a href="FAQ.htm"><img class="topNav" src="http://placehold.it/1000x60" alt="FAQ"></a>
-				<li><a href="SignUp.htm"><img class="topNav" src="http://placehold.it/1500x60" alt="Sign Up"></a>
-				<li><a href="Download.htm"><img class="topNav" src="http://placehold.it/1800x60" alt="Download"></a>
-			</ul>
-			
-			
-			
-			<h1><a href="#">About Us</a></h1>
-			<h1><a href="#">FAQ</a></h1>
-			<h1><a href="#">Sign Up</a></h1>
-			<h1><a href="#">Download</a></h1>
-			
-						<ul>
-				<li><a href="#">About Us</a>
-				<li><a href="#">FAQ</a>
-				<li><a href="#">Sign Up</a>
-				<li><a href="#">Download</a>
-			</ul>
 				-->
