--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>- - - Page Title - - -</title>
+	<title>404 Not Found</title>
 	<!-- Add CSS stylesheet -->
 </head>
 
@@ -24,7 +24,12 @@
 	
 	
 	<section>
-		Page Content
+	<hgroup>
+		<h1>404</h1>
+		<h2>Not Found</h2>
+	</hgroup>
+	
+	<img src="Images/404.jpg" alt="404 picture" title="404 picture">
 	</section>
 	
 	
