Updated Page Template

--- a/Pages/Page template.htm
+++ b/Pages/Page template.htm
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>- - - Page Title - - -</title>
+  <!-- Basic Page Needs
+  ––––––––––––––––––––––––––––––––––––––––––––––––––--->
+  <title>- - - Page Title - - -</title>
+  <meta name="description" content="cloud">
+  <meta name="author" content="Tamir.SH">
+	
+	 <!-- CSS
+  ––––––––––––––––––––––––––––––––––––––––––––––––––--->
 	<!-- Add CSS stylesheet -->
 </head>
 
@@ -24,7 +31,7 @@
 	
 	
 	<section>
-		Page Content
+		<h1>Page Content</h1>
 	</section>
 	
 	
