Update template + general css

--- a/Pages/Page template.htm
+++ b/Pages/Page template.htm
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-  <!-- Basic Page Needs
+		<!-- Basic Page Needs:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
   <title>- - - Page Title - - -</title>
+  <meta charset="utf-8">
   <meta name="description" content="cloud">
   <meta name="author" content="Tamir.SH">
 	
-	 <!-- CSS
+		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
+	<link rel="stylesheet" type="text/css" href="css/General.css">
 	<!-- Add CSS stylesheet -->
 </head>
 
-<body>
+<!--========================================================================================-->
+
+<body align="center">
 	<header>
-	<a href="#"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="#"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
+	<div width="50%">
 	<nav id="top">
 		<ul>
 			<li><a href="#">About Us</a>
@@ -25,6 +29,13 @@
 			<li><a href="#">Download</a>
 		</ul>
 	</nav>
+	</div>
+	
+	
+	
+
+
+
 	</header>
 	
 	
@@ -32,6 +43,9 @@
 	
 	<section>
 		<h1>Page Content</h1>
+		some content some content some content some content some content some content some content <br>
+		some content some content some content some content some content some content some content <br>
+		some content some content some content some content some content some content some content <br>
 	</section>
 	
 	
