Page Template update
added urls to a tags

--- a/Pages/Page template.htm
+++ b/Pages/Page template.htm
@@ -11,36 +11,26 @@
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
 	<link rel="stylesheet" type="text/css" href="css/General.css">
-	<!-- Add CSS stylesheet -->
+	<!-- Here you add CSS stylesheet -->
 </head>
 
 <!--========================================================================================-->
 
 <body align="center">
 	<header>
-		<a href="#"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
-	<div width="50%">
 	<nav id="top">
 		<ul>
-			<li><a href="#">About Us</a>
-			<li><a href="#">FAQ</a>
-			<li><a href="#">Sign Up</a>
-			<li><a href="#">Download</a>
+			<li><a href="AboutUs.htm">About Us</a>
+			<li><a href="FAQ.htm">FAQ</a>
+			<li><a href="SignUp.htm">Sign Up</a>
+			<li><a href="Download.htm">Download</a>
 		</ul>
 	</nav>
-	</div>
-	
-	
-	
-
-
-
 	</header>
 	
-	
-	
-	
+
 	<section>
 		<h1>Page Content</h1>
 		some content some content some content some content some content some content some content <br>
@@ -48,25 +38,20 @@
 		some content some content some content some content some content some content some content <br>
 	</section>
 	
-	
-	
-	
+
 	<footer>
 	<small>Copyright © 2014-2016 Tamir Shorhy and Nave Tal</small>
 	
 	<nav id="bottom">
 		<ul>
-			<li><a href="#">About Us</a>
-			<li><a href="#">FAQ</a>
-			<li><a href="#">Sign Up</a>
-			<li><a href="#">Download</a>
-			<li><a href="#">Site Map</a>
+			<li><a href="AboutUs.htm">About Us</a>
+			<li><a href="FAQ.htm">FAQ</a>
+			<li><a href="SignUp.htm">Sign Up</a>
+			<li><a href="Download.htm">Download</a>
+			<li><a href="SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
-		
 	</footer>
-	
-	
 </body>
 </html>
 
