--- a/Pages/Error500.htm
+++ b/Pages/Error500.htm
@@ -3,7 +3,7 @@
 <head>
 		<!-- Basic Page Needs:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-  <title>404 Not Found</title>
+  <title>500 Internal Server Error</title>
   <meta charset="utf-8">
   <meta name="description" content="cloud">
   <meta name="author" content="Tamir.SH">
@@ -33,8 +33,8 @@
 	
 
 	<section>
-		<h1>404 - Not Found</h1>
-		<img src="Images/404.jpg" alt="404 funny picture" title="404 funny picture">
+		<h1>500 - Internal Server Error</h1>
+		<img src="Images/500.jpg" alt="500 funny picture" title="500 funny picture">
 	</section>
 	
 
