Tiny template update

--- a/Pages/Page template.htm
+++ b/Pages/Page template.htm
@@ -33,9 +33,9 @@
 
 	<section>
 		<h1>Page Content</h1>
+		<p>some content some content some content some content some content some content some content <br>
 		some content some content some content some content some content some content some content <br>
-		some content some content some content some content some content some content some content <br>
-		some content some content some content some content some content some content some content <br>
+		some content some content some content some content some content some content some content </p>
 	</section>
 	
 
