Added Download page! + more
* updated general css.
* added fake and temporary Bcloud client.

--- a/Pages/Download.htm
+++ b/Pages/Download.htm
@@ -3,7 +3,7 @@
 <head>
 		<!-- Basic Page Needs:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-  <title>- - - Page Title - - -</title>
+  <title>Download</title>
   <meta charset="utf-8">
   <meta name="description" content="cloud">
   <meta name="author" content="Tamir.SH">
@@ -11,6 +11,7 @@
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
 	<link rel="stylesheet" type="text/css" href="css/General.css">
+	<link rel="stylesheet" type="text/css" href="css/Download.css">
 	<!-- Here you add CSS stylesheet -->
 </head>
 
@@ -32,8 +33,8 @@
 	
 
 	<section>
-		<h1>Downloads</h1>
-		<h2>The program</h2>
+		<p><a class="outButton" href="../files/Bcloud_client.txt" download="Bcloud_client">The program</a></p> <!-- Need to be updated in the future -->
+		<p><a class="outButton" href="FolderDownload.htm">Public folder of a named user</a></p>
 	</section>
 	
 
