--- a/Pages/index.htm
+++ b/Pages/index.htm
@@ -33,7 +33,7 @@
 
 	<section>
 		<h1>Bcloud - because we are swagers</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel metus quis ipsum commodo maximus. Fusce ultricies lectus at mauris malesuada, vel aliquam turpis tempus. Curabitur metus neque, pretium at ex quis, dapibus accumsan arcu. Proin tempor ex sit amet sapien varius dapibus. Sed eget neque eget sapien feugiat elementum. Donec at nibh ut neque dignissim lacinia. Ut porta in diam eleifend semper. Proin suscipit viverra eros. In volutpat feugiat est, vitae pretium purus tincidunt at. Ut vitae purus volutpat, accumsan felis vel, efficitur enim. In venenatis viverra nisi, non blandit magna lacinia rutrum. Vivamus vel tempor lorem. Vivamus ante sem, consequat quis tristique sit amet, aliquam at lorem. Donec sit amet suscipit elit, fringilla dictum magna. Cras ullamcorper urna id nunc varius, vitae aliquet elit luctus. Etiam lectus odio, condimentum eu commodo ac, suscipit lacinia orci. </p>
+		<p>OMG! We don't really have anything to write here! But whatever! Now you can press on something in the menu above! </p>
 	</section>
 	
 
