update to FolderDownload page

--- a/Pages/FolderDownload.htm
+++ b/Pages/FolderDownload.htm
@@ -13,13 +13,13 @@
 	<link rel="stylesheet" type="text/css" href="css/General.css">
 	<!-- Here you add CSS stylesheet -->
 	
-	<script type="text/javascript">
-		
-	</script>
-	
 	<style type="text/css">
 		label#one { margin-right:3px; }
 	</style>
+
+		<!-- Javascript:
+  ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
+	<script type="text/javascript" src="js/ValidCheck.js"></script>
 </head>
 
 <!--========================================================================================-->
