Added working and swaging javascript to FolderDownload

--- a/Pages/FolderDownload.htm
+++ b/Pages/FolderDownload.htm
@@ -19,7 +19,7 @@
 
 		<!-- Javascript:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
-	<script type="text/javascript" src="js/ValidCheck.js"></script>
+	<script type="text/javascript" src="js/Validate.js"></script>
 </head>
 
 <!--========================================================================================-->
@@ -42,10 +42,9 @@
 	<section>
 		<h1>Share</h1>
 		<p>Here you can download files other users chose to share. All you need to do is enter the username of whom you want to download his shared files.</p>
-		<!-- Add the form! -->
 		<form>
 			<label id="one">username: <input type="text" id="username"></label>
-			<input type="button" onclick="send()" value="Submit">
+			<input type="button" onclick="checkAndSend()" value="Submit">
 		</form>
 	</section>
 	
