--- a/Pages/FolderDownload.htm
+++ b/Pages/FolderDownload.htm
@@ -44,7 +44,7 @@
 		<p>Here you can download files other users chose to share. All you need to do is enter the username of whom you want to download his shared files.</p>
 		<form>
 			<label id="one">username: <input type="text" id="username"></label>
-			<input type="button" onclick="checkAndSend()" value="Submit">
+			<input type="button" onclick="checkAndSend1()" value="Submit">
 		</form>
 	</section>
 	
