Finished form to sign up and validation code
All that is missing is encrypting the password.

--- a/Pages/SignUp.htm
+++ b/Pages/SignUp.htm
@@ -39,16 +39,14 @@
 		<h1>Sign Up</h1>
 		<p>Here you can sign up to our service. After you sign up, you need to download our program and sign in to your user from the program. <br><br>
 		MORE INSTRUCTIONS WILL BE ADDED IN THE FUTURE. </p>
-		<form method="POST" action="localhost:8080/SignUpAprroval.htm">
+		
+		<form>
 			<p><label>Username: <input type="text" id="username"></label></p>
 			<p><label>Password: <input type="password" id="password"></label></p>
-			<p><input type="submit" value="Submit"</p>
+			<p><input type="button" value="Submit" onclick="checkAndSend2()"</p>
 		</form>
 		
-		<!-- Need to add form -->
-		
-		
-		<a href="SignUpApproval.htm">The page that will be after the form</a>
+		<a href="SignUpApproval.htm">The page that will be after the form, this link is temporary.</a>
 	</section>
 	
 
