--- a/Pages/SignUp.htm
+++ b/Pages/SignUp.htm
@@ -16,6 +16,8 @@
 		<!-- Javascript:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
 	<script type="text/javascript" src="js/Validate.js"></script>
+	<script type="text/javascript" src="js/Cipher.js"></script>
+	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
 </head>
 
 <!--========================================================================================-->
