Updated encryption and validation
*Now it sends a hash of the password instead of a encrypted password.
*Also added maximal length.

--- a/Pages/FolderDownload.htm
+++ b/Pages/FolderDownload.htm
@@ -43,7 +43,7 @@
 		<h1>Share</h1>
 		<p>Here you can download files other users chose to share. All you need to do is enter the username of whom you want to download his shared files.</p>
 		<form>
-			<label id="one">username: <input type="text" id="username"></label>
+			<label id="one">Username: <input type="text" id="username"></label>
 			<input type="button" onclick="checkAndSend1()" value="Submit">
 		</form>
 	</section>
