--- a/Pages/SignUp.htm
+++ b/Pages/SignUp.htm
@@ -17,7 +17,7 @@
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
 	<script type="text/javascript" src="js/Validate.js"></script>
 	<script type="text/javascript" src="js/Cipher.js"></script>
-	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
+	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
 </head>
 
 <!--========================================================================================-->
