Fixed problem with nonconstant IP
Now it takes the IP from the URL of the browser.

--- a/Pages/SignUp.htm
+++ b/Pages/SignUp.htm
@@ -45,7 +45,7 @@
 		<form>
 			<p><label>Username: <input type="text" id="username"></label></p>
 			<p><label>Password: <input type="password" id="password"></label></p>
-			<p><input type="button" value="Submit" onclick="checkAndSend2()"</p>
+			<p><input type="button" value="Submit" onclick="checkAndSend2()"></p>
 		</form>
 		
 		<a href="SignUpApproval.htm">The page that will be after the form, this link is temporary.</a>
