--- a/Pages/Download.htm
+++ b/Pages/Download.htm
@@ -33,7 +33,7 @@
 	
 
 	<section>
-		<p><a class="outButton" href="../files/Bcloud_client.txt" download="Bcloud_client">The program</a></p> <!-- Need to be updated in the future -->
+		<p><a class="outButton" href="../files/Bcloud_installer.py" download="Bcloud_client">The program</a></p> <!-- Need to be updated in the future -->
 		<p><a class="outButton" href="FolderDownload.htm">Shared files</a></p>
 	</section>
 	
