--- a/Pages/ErrorNameInUse.htm
+++ b/Pages/ErrorNameInUse.htm
@@ -10,26 +10,27 @@
 	
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-	<link rel="stylesheet" type="text/css" href="css/General.css">
+	<link rel="stylesheet" type="text/css" href="Pages/css/General.css">
 	<!-- Here you add CSS stylesheet -->
 	
 		<!-- Javascript:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
-	<script type="text/javascript" src="js/Validate.js"></script>
+	<script type="text/javascript" src="Pages/js/Validate.js"></script>
 </head>
 
 <!--========================================================================================-->
 
 <body align="center">
 	<header>
-		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
 	<nav id="top">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
+			<li><a href="Pages/SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
 	</header>
@@ -48,7 +49,7 @@
 			<p><input type="button" value="Submit" onclick="checkAndSend2()"</p>
 		</form>
 		
-		<a href="SignUpApproval.htm">The page that will be after the form, this link is temporary.</a>
+		<a href="Pages/SignUpApproval.htm">The page that will be after the form, this link is temporary.</a>
 	</section>
 	
 
@@ -57,11 +58,11 @@
 	
 	<nav id="bottom">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
-			<li><a href="SiteMap.htm">Site Map</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
+			<li><a href="Pages/SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
 	</footer>
