--- a/Pages/ErrorNoName.htm
+++ b/Pages/ErrorNoName.htm
@@ -10,7 +10,7 @@
 	
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-	<link rel="stylesheet" type="text/css" href="css/General.css">
+	<link rel="stylesheet" type="text/css" href="Pages/css/General.css">
 	<!-- Here you add CSS stylesheet -->
 	
 	<style type="text/css">
@@ -19,21 +19,21 @@
 
 		<!-- Javascript:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
-	<script type="text/javascript" src="js/Validate.js"></script>
+	<script type="text/javascript" src="Pages/js/Validate.js"></script>
 </head>
 
 <!--========================================================================================-->
 
 <body align="center">
 	<header>
-		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
 	<nav id="top">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
 		</ul>
 	</nav>
 	</header>
@@ -43,7 +43,7 @@
 		<h1>Share</h1>
 		<p>Here you can download files other users chose to share. All you need to do is enter the username of whom you want to download his shared files.</p>
 		
-		<p Class="ErrorMessage">We are sorry, but the name you entered does not exist in our database... :-/ You are invited to try a different name... Maybe you typed it wrong?</p>
+		<p Class="ErrorMessage" color="red">We are sorry, but the name you entered does not exist in our database... :-/ You are invited to try a different name... Maybe you typed it wrong?</p>
 		
 		
 		<form>
@@ -58,11 +58,11 @@
 	
 	<nav id="bottom">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
-			<li><a href="SiteMap.htm">Site Map</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
+			<li><a href="Pages/SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
 	</footer>
