--- a/Pages/SignUpApproval.htm
+++ b/Pages/SignUpApproval.htm
@@ -10,7 +10,7 @@
 	
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-	<link rel="stylesheet" type="text/css" href="css/General.css">
+	<link rel="stylesheet" type="text/css" href="Pages/css/General.css">
 	<!-- Here you add CSS stylesheet -->
 </head>
 
@@ -18,14 +18,14 @@
 
 <body align="center">
 	<header>
-		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
 	<nav id="top">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
 		</ul>
 	</nav>
 	</header>
@@ -41,11 +41,11 @@
 	
 	<nav id="bottom">
 		<ul>
-			<li><a href="AboutUs.htm">About Us</a>
-			<li><a href="FAQ.htm">FAQ</a>
-			<li><a href="SignUp.htm">Sign Up</a>
-			<li><a href="Download.htm">Download</a>
-			<li><a href="SiteMap.htm">Site Map</a>
+			<li><a href="Pages/AboutUs.htm">About Us</a>
+			<li><a href="Pages/FAQ.htm">FAQ</a>
+			<li><a href="Pages/SignUp.htm">Sign Up</a>
+			<li><a href="Pages/Download.htm">Download</a>
+			<li><a href="Pages/SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
 	</footer>
