--- a/Pages/ErrorEmptyFolder.htm
+++ b/Pages/ErrorEmptyFolder.htm
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 		<!-- Basic Page Needs:
-  ??????????????????????????????????????????????????---->
+  ––––––––––––––––––––––––––––––––––––––––––––––––––--->
   <title>Empty Folder</title>
   <meta charset="utf-8">
   <meta name="description" content="cloud">
   <meta name="author" content="Tamir.SH">
 	
 		<!-- CSS:
-  ??????????????????????????????????????????????????---->
+  ––––––––––––––––––––––––––––––––––––––––––––––––––--->
 	<link rel="stylesheet" type="text/css" href="Pages/css/General.css">
 	<link rel="stylesheet" type="text/css" href="Pages/css/HttpError.css">
 	<!-- Here you add CSS stylesheet -->
@@ -35,7 +35,7 @@
 	<section>
 		<h1>Empty Folder</h1>
 		<p>The user name exists but his public folder is empty. Hence there is no need to download it. </p>
-		<img src="Images/Empty.jpg" alt="Empty folder picture" title="Empty folder picture">
+		<img src="Pages/Images/Empty.jpg" alt="Empty folder picture" title="Empty folder picture">
 	</section>
 	
 
