--- a/Pages/ErrorNoName.htm
+++ b/Pages/ErrorNoName.htm
@@ -14,7 +14,7 @@
 	<!-- Here you add CSS stylesheet -->
 	
 	<style type="text/css">
-		label#one { margin-right:3px; }
+		label#field { margin-right:3px; }
 	</style>
 
 		<!-- Javascript:
@@ -43,11 +43,11 @@
 		<h1>Share</h1>
 		<p>Here you can download files other users chose to share. All you need to do is enter the username of whom you want to download his shared files.</p>
 		
-		<p Class="ErrorMessage" color="red">We are sorry, but the name you entered does not exist in our database... :-/ You are invited to try a different name... Maybe you typed it wrong?</p>
+		<p Class="ErrorMessage">We are sorry, but the name you entered does not exist in our database... :-/ You are invited to try a different name... Maybe you typed it wrong?</p>
 		
 		
 		<form>
-			<label id="one">username: <input type="text" id="username"></label>
+			<label id="field">username: <input type="text" id="username"></label>
 			<input type="button" onclick="checkAndSend1()" value="Submit">
 		</form>
 	</section>
