--- a/Pages/SignUpApproval.htm
+++ b/Pages/SignUpApproval.htm
@@ -33,6 +33,7 @@
 
 	<section>
 		<h1>Thank You For Signing Up! :-)</h1>
+		<h2>To move to the downloads page in order to download the program - <a href="Pages/Download.htm">press here</a>.
 	</section>
 	
 
