Changed extention .html -> .htm

--- a/Pages/LastUpdatePlus.htm
+++ b/Pages/LastUpdatePlus.htm
@@ -30,7 +30,7 @@
 
 <body align="center">
 	<header>
-		<a href="index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="Pages/index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
 	<nav id="top">
 		<ul>
@@ -47,7 +47,7 @@
 		<h1>Share</h1>
 		<p>The last time <span id="username">{UN}</span> updated his/her public folder was {LUD}.</p>
 		<p><strong>Are you sure you want to download {UN}'s public folder?</strong></p>
-		<span><a class="outButtonYes" onclick="get_last_update()">Yes</a></span><span><a class="outButtonNo" href="index.htm">No</a></span>
+		<span><a class="outButtonYes" onclick="get_last_update()" download="public_folder.zip">Yes</a></span><span><a class="outButtonNo" href="Pages/index.htm">No</a></span>
 	</section>
 	
 
