some path fix in LUP page

--- a/Pages/LastUpdatePlus.htm
+++ b/Pages/LastUpdatePlus.htm
@@ -16,7 +16,7 @@
 	
 	<!-- Javascript:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->	
-	<script type="text/javascript" src="js/download_help.js"></script>
+	<script type="text/javascript" src="Pages/js/download_help.js"></script>
 </head>
 
 <!--========================================================================================-->
