fix? Wierd problem with paths... need to be checked...

--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -10,8 +10,8 @@
 	
 		<!-- CSS:
   ––––––––––––––––––––––––––––––––––––––––––––––––––--->
-	<link rel="stylesheet" type="text/css" href="Pages/css/General.css">
-	<link rel="stylesheet" type="text/css" href="Pages/css/HttpError.css">
+	<link rel="stylesheet" type="text/css" href="css/General.css">
+	<link rel="stylesheet" type="text/css" href="css/HttpError.css">
 	<!-- Here you add CSS stylesheet -->
 </head>
 
@@ -19,7 +19,7 @@
 
 <body align="center">
 	<header>
-		<a href="index.htm"><img id="logo" src="Pages/Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
+		<a href="index.htm"><img id="logo" src="Images/logo.png" alt="Our logo, click for home page" title="Our logo, click for home page"></a>
 		
 	<nav id="top">
 		<ul>
@@ -34,7 +34,7 @@
 
 	<section>
 		<h1>404 - Not Found</h1>
-		<img src="Pages/Images/404.jpg" alt="404 funny picture" title="404 funny picture">
+		<img src="Images/404.jpg" alt="404 funny picture" title="404 funny picture">
 	</section>
 	
 
