404 path problem fix

--- a/Pages/Error404.htm
+++ b/Pages/Error404.htm
@@ -43,11 +43,11 @@
 	
 	<nav id="bottom">
 		<ul>
-			<li><a href="Pages/AboutUs.htm">About Us</a>
-			<li><a href="Pages/FAQ.htm">FAQ</a>
-			<li><a href="Pages/SignUp.htm">Sign Up</a>
-			<li><a href="Pages/Download.htm">Download</a>
-			<li><a href="Pages/SiteMap.htm">Site Map</a>
+			<li><a href="AboutUs.htm">About Us</a>
+			<li><a href="FAQ.htm">FAQ</a>
+			<li><a href="SignUp.htm">Sign Up</a>
+			<li><a href="Download.htm">Download</a>
+			<li><a href="SiteMap.htm">Site Map</a>
 		</ul>
 	</nav>
 	</footer>
