--- a/Pages/SignUp.htm
+++ b/Pages/SignUp.htm
@@ -45,7 +45,7 @@
 		<div id="Dinst">
 			<h3 id="Hinst">Instructions:</h3>
 			<ol id="inst">
-				<li>Sign up here. Be aware the the following characters are forbidden for use: '|','\', '/', ':', '*', '?', '"', '<', '>'. Furthermore, your username and your password must be at least 4 characters long, and cannot be greater then 31 in length.</li>
+				<li>Sign up here. Be aware that the following characters are forbidden for use: '|','\', '/', ':', '*', '?', '"', '<', '>'. Furthermore, your username and your password must be at least 4 characters long, and cannot be greater then 31 in length.</li>
 				<li>If you haven't installed 'python 2.7' yet - do it now according to the text in red that is seen above. If you have - proceed to the next step.</li>
 				<li>Download the Bcloud installer from the downloads page.</li>
 				<li>Run the Bcloud installer and follow the instructions (of course not these, the instructions that are in it).</li>
